--- a/.npmrc
+++ b/.npmrc
@@ -2,3 +2,4 @@ init.author.name=Bart Callant
 init.author.email=bart@callant.net
 init.author.url=https://callant.net
 init.license=MIT
+init.version=0.0.0
