--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,5 @@
-init.author.name=Bart Callant
-init.author.email=bart@callant.net
-init.author.url=https://callant.net
-init.license=MIT
-init.version=0.0.0
+init-author-email=bart@callant.net
+init-author-name=Bart Callant
+init-author-url=https://callant.net/
+init-license=MIT
+init-version=0.0.0
